// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`three-columns 1`] = `
<thead
  className="tc-table-head theme-tc-table-head sr-only"
>
  <tr
    className="tc-table-head-row theme-tc-table-head-row"
  >
    <th
      className="th-name theme-tc-table-head-th"
      id="my-table-name"
    >
      <div
        className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-name"
      >
        Name
      </div>
    </th>
    <th
      className="th-type theme-tc-table-head-th"
      id="my-table-type"
    >
      <div
        className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-type"
      >
        Type
      </div>
    </th>
    <th
      className="th-desc theme-tc-table-head-th"
      id="my-table-desc"
    >
      <div
        className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc"
      >
        Description
      </div>
    </th>
  </tr>
</thead>
`;

exports[`three-columns-with-sorters 1`] = `
<thead
  className="tc-table-head theme-tc-table-head sr-only"
>
  <tr
    className="tc-table-head-row theme-tc-table-head-row"
  >
    <th
      className="th-name theme-tc-table-head-th"
      id="my-table-name"
    >
      <button
        aria-label="Name"
        className="tc-table-sort-header tc-table-head-label theme-tc-table-head-label tc-table-head-label-name btn btn-link"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        role="link"
        type="button"
      >
        <span>
          Name
        </span>
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="none-icon"
          title={null}
        />
      </button>
    </th>
    <th
      className="th-type theme-tc-table-head-th"
      id="my-table-type"
    >
      <button
        aria-label="Type"
        className="tc-table-sort-header tc-table-head-label theme-tc-table-head-label tc-table-head-label-type btn btn-link"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        role="link"
        type="button"
      >
        <span>
          Type
        </span>
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="none-icon"
          title={null}
        />
      </button>
    </th>
    <th
      className="th-desc theme-tc-table-head-th"
      id="my-table-desc"
    >
      <button
        aria-label="Description"
        className="tc-table-sort-header tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc btn btn-link"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        role="link"
        type="button"
      >
        <span>
          Description
        </span>
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="none-icon"
          title={null}
        />
      </button>
    </th>
  </tr>
</thead>
`;
